tests/cases/compiler/missingCloseBracketInArray/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/missingCloseBracketInArray.ts`, Apache-2.0 License

var alphas:string[] = alphas = ["1","2","3","4"
//~ ERROR: ']' expected.